--- a/index.html
+++ b/index.html
@@ -3,18 +3,33 @@ layout: default
 ---
 
 <div class="home">
-  <div class="site-title">
-    <em>A monthly coding meetup in Manchester, where developers hone their skills by performing <a href="http://en.wikipedia.org/wiki/Kata_(programming)" rel="nofollow">Katas</a> and <a href="http://codingdojo.org/cgi-bin/wiki.pl?RandoriKata" rel="nofollow">Randori</a></em>
-  </div>
+  <header class="sub-title">
+    <h2>A monthly coding meetup in Manchester, where developers hone their skills by performing <a href="http://en.wikipedia.org/wiki/Kata_(programming)" rel="nofollow">Katas</a></h2>
+  </header>
 
-  <div class='page-col-1'>
-  </div>
-
-  <div class='page-col-2'>
-    <div class="span4 twitter">
-      <a class="twitter-timeline" href="https://twitter.com/manc_codejo" data-widget-id="348794252693745664">Tweets by @manc_codejo</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  <section>
+    <div class='page-col-1'>
+      <ul class="events">
+      {% for post in site.posts %}
+        <li>
+          <article class="event">
+            <div class="header">
+              <h3 class="title">{{ post.title }}</h3>
+              <h3 class="title-date">{{post.date | date_to_string}}</h3>
+            </div>
+            <div>{{post.content}}</div>
+          </article>
+        </li>
+      {% endfor %}
+      </ul>
     </div>
-  </div>
+
+    <div class='page-col-2'>
+      <div class="span4 twitter">
+        <a class="twitter-timeline" href="https://twitter.com/manc_codejo" data-widget-id="348794252693745664">Tweets by @manc_codejo</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      </div>
+    </div>
+  </section>
 
 </div>
