--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@ layout: default
   </header>
 
   <section>
-    <div class='page-col-1'>
-      <ul class="events">
-      {% for post in site.posts limit:3 %}
-        <li>
-          <article class="event">
-            <div class="header">
-              <h3 class="title">{{post.date | date_to_string}} - {{ post.title }}</h3>
-            </div>
-            <div class="event-content">{{post.content}}</div>
-          </article>
-        </li>
-      {% endfor %}
-      </ul>
-      <div class="allEventsLink">
-        <a href="/events">See all previous events</a>
-      </div>
-    </div>
+    <div class="grid">
+      <div class='grid__item lap--one-whole palm--one-whole two-thirds'>
+        <ul class="events">
+        {% for post in site.posts limit:3 %}
+          <li>
+            <article class="event">
+              <div class="header">
+                <h3 class="title">{{post.date | date_to_string}} - {{ post.title }}</h3>
+              </div>
+              <div class="event-content">{{post.content}}</div>
+            </article>
+          </li>
+        {% endfor %}
+        </ul>
+        <div class="allEventsLink">
+          <a href="/events">See all previous events</a>
+        </div>
+      </div><!--
 
-    <div class='page-col-2'>
-      <div class="span4 twitter">
-        <a class="twitter-timeline" href="https://twitter.com/manc_codejo" data-widget-id="348794252693745664">Tweets by @manc_codejo</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      --><div class='grid__item lap--one-whole palm--one-whole one-third'>
+        <div class="span4 twitter">
+          <a class="twitter-timeline" href="https://twitter.com/manc_codejo" data-widget-id="348794252693745664">Tweets by @manc_codejo</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
       </div>
     </div>
   </section>
