--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <h2>A monthly coding meetup in Manchester, where developers hone their skills by performing <a href="http://en.wikipedia.org/wiki/Kata_(programming)" rel="nofollow">Katas</a></h2>
   </header>
 
-  <section>
+  <!-- <section>
     <div class="grid">
       <div class='grid__item lap--one-whole palm--one-whole two-thirds'>
         <ul class="events">
@@ -34,6 +34,6 @@ layout: default
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 </div>
