--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <h2>A monthly coding meetup in Manchester, where developers hone their skills by performing <a href="http://en.wikipedia.org/wiki/Kata_(programming)" rel="nofollow">Katas</a></h2>
   </header>
 
- <!--  <section>
+  <section>
     <div class="grid">
       <div class='grid__item lap--one-whole palm--one-whole two-thirds'>
         <ul class="events">
@@ -25,15 +25,15 @@ layout: default
         <div class="allEventsLink">
           <a href="/events">See all previous events</a>
         </div>
-      </div> --><!--
+      </div><!--
 
-      --><!-- <div class='grid__item lap--one-whole palm--one-whole one-third'>
+      --><div class='grid__item lap--one-whole palm--one-whole one-third'>
         <div class="span4 twitter">
           <a class="twitter-timeline" href="https://twitter.com/manc_codejo" data-widget-id="348794252693745664">Tweets by @manc_codejo</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
 </div>
